<?xml version="1.0" encoding="UTF-8"?>
<!--Generated file by locale-gradle-plugin, do not edit manually!
2024-08-09 22.45--><resources>
    <string name="quit">Quit</string>
    <string name="clear_recent_sizes">Clear recent sizes</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="system_default">System default</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="preferences">Preferences</string>
    <string name="toggle_expand">Toggle expand</string>
    <string name="toggle_background">Toggle background</string>
    <string name="toggle_border">Toggle border</string>
    <string name="reset">Reset</string>
    <string name="minimize">Minimize</string>
    <string name="zoom">Zoom</string>
    <string name="check_for_update">Check for Update</string>
    <string name="view_on_github">View on GitHub</string>
    <string name="open_source_licenses">Open-source licenses</string>
    <string name="about">About</string>
    <string name="_boxes_cleared">Boxes cleared.</string>
    <string name="_update_available">Plano version %s is available.</string>
    <string name="_update_unavailable">You already have the latest version.</string>
    <string name="_desc">Calculate how many trim boxes fit in a media box.</string>
    <string name="media_size">Media size</string>
    <string name="_media_size">Source paper size, a direct parent of trim size.</string>
    <string name="trim_size">Trim size</string>
    <string name="_trim_size">Target size of which the paper will be trimmed into.</string>
    <string name="gap">Gap</string>
    <string name="_gap">Gap is a distance between each papers.</string>
    <string name="allow_flip">Allow flip</string>
    <string name="allow_flip_right">Allow flip right</string>
    <string name="allow_flip_bottom">Allow flip bottom</string>
    <string name="_allow_flip">When activated, trim boxes may be flipped in order to achieve highest number of trim boxes available.</string>
    <string name="right">Right</string>
    <string name="bottom">Bottom</string>
    <string name="calculate">Calculate</string>
    <string name="more">More</string>
    <string name="info">Info</string>
    <string name="a_series">A Series</string>
    <string name="b_series">B Series</string>
    <string name="c_series">C Series</string>
    <string name="f_series">F Series</string>
    <string name="others">Others</string>
    <string name="rotate">Rotate</string>
    <string name="close">Close</string>
    <string name="close_all">Close all</string>
    <string name="save">Save</string>
    <string name="_save">Saved as %s.</string>
    <string name="no_content">No content</string>
    <string name="_about">Plano is an efficient paper size calculator app. See GitHub for more information.</string>
    <string name="please_restart">Please restart</string>
    <string name="_please_restart">Restart app to see effect.</string>
    <string name="view_sizes">View sizes</string>
    <string name="sizes">Sizes</string>
    <string name="main_width">Main width</string>
    <string name="main_height">Main height</string>
    <string name="remaining_width">Remaining width</string>
    <string name="remaining_height">Remaining height</string>
    <string name="btn_undo">UNDO</string>
    <string name="btn_download">DOWNLOAD</string>
    <string name="btn_show_directory">SHOW DIRECTORY</string>
    <string name="btn_close">CLOSE</string>
</resources>
